[package]
name = "egui_property_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32"

[dev-dependencies]
eframe = {version = "0.32", features=["glow","wgpu"]}
wgpu = {version = "25", features = ["vulkan"]}
[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
